fixed the issue with youtube embed sizing on iphones/ipad etc.

--- a/sass/blocks/_article-display.scss
+++ b/sass/blocks/_article-display.scss
@@ -521,6 +521,13 @@
 		& > img.alignleft,& >img.alignright,&>img.alignnone,&>img.aligncenter {
 			margin: 0px 0 24px;
 		}
+		.video-container {
+			float: left;
+			max-width: 100%;
+			iframe {
+				max-width: 100%;
+			}
+		}
 	}
 }
 
@@ -586,6 +593,7 @@
 				max-width: 100%;
 				iframe {
 					max-width: 100%;
+					//width: 100%;
 				}
 			}
 		}
